# ai_painter

./: README.md  pyproject.toml
src/ai_painter/: __main__.py  about.ui  dialogdefaultprompts.ui  dialogmodels.ui  paint.py  paint.ui  paintsystem.py  pic.py  ui_about.py  ui_dialogdefaultprompts.py  ui_dioalogmodels.py  ui_mainwindow.py  ui_paint.py
