[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AIPainter"
version = "0.0.2"
description = "Diffusionモデルを使用したお絵かきツールです。"
requires-python = ">=3.12"
authors = [{ name = "Tanaka Takashi" }]
license = { text = "GPLv3" }
readme = "README.md"

dependencies = [
    "accelerate==1.10.1",
    "addict==2.4.0",
    "aliyun-python-sdk-core==2.16.0",
    "aliyun-python-sdk-kms==2.16.5",
    "asttokens==3.0.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "chumpy==0.70",
    "click==8.3.0",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "crcmod==1.7",
    "cryptography==46.0.2",
    "cycler==0.12.1",
    "cython==3.1.4",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "diffusers==0.35.2",
    "executing==2.2.1",
    "filelock==3.14.0",
    "fonttools==4.60.1",
    "fsspec==2025.9.0",
    "hf-xet==1.1.10",
    "huggingface-hub==0.35.3",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "ipykernel==7.0.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==0.10.0",
    "json-tricks==3.17.3",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyterlab-widgets==3.0.15",
    "kiwisolver==1.4.9",
    "lark==1.3.0",
    "markdown==3.9",
    "markdown-it-py==4.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mmcv==2.0.0rc4",
    "mmdet==3.3.0",
    "mmengine==0.10.7",
    "mmpose==1.3.2",
    "model-index==0.1.11",
    "mpmath==1.3.0",
    "munkres==1.1.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "ninja==1.13.0",
    "numpy==2.2.6",
    "opencv-contrib-python==4.12.0.88",
    "opencv-python==4.11.0.86",
    "opendatalab==0.0.10",
    "openmim==0.3.9",
    "openxlab==0.0.11",
    "optimum==2.0.0",
    "optimum-quanto==0.2.7",
    "ordered-set==4.1.0",
    "oss2==2.17.0",
    "packaging==24.2",
    "pandas==2.3.3",
    "parso==0.8.5",
    "peft==0.17.1",
    "pillow==11.3.0",
    "pip==25.2",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "protobuf==6.32.1",
    "psutil==7.1.0",
    "pure-eval==0.2.3",
    "pycocotools==2.0.10",
    "pycparser==2.23",
    "pycryptodome==3.23.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pyside6==6.10.0",
    "pyside6-addons==6.10.0",
    "pyside6-essentials==6.10.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2023.4",
    "pywin32==311",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2025.9.18",
    "requests==2.28.2",
    "rich==13.4.2",
    "safetensors==0.6.2",
    "scipy==1.16.2",
    "sd-embed @ git+https://github.com/xhinker/sd_embed.git@4a47f71150a22942fa606fb741a1c971d95ba56f",
    "sentencepiece==0.2.1",
    "setuptools==80.9.0",
    "shapely==2.1.2",
    "shiboken6==6.10.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "termcolor==3.1.0",
    "terminaltables==3.1.10",
    "tokenizers==0.22.1",
    "torch==2.8.0+cu129",
    "torchaudio==2.8.0",
    "torchvision==0.23.0+cu129",
    "tornado==6.5.2",
    "tqdm==4.65.2",
    "traitlets==5.14.3",
    "transformers==4.57.1",
    "triton-windows==3.5.0.post21",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==1.26.20",
    "wcwidth==0.2.14",
    "widgetsnbextension==4.0.14",
    "xtcocotools==1.14.3",
    "yapf==0.43.0",
    "zipp==3.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]  # Search in both directories
include = ["ai_painter"]                     # Include all packages found
exclude = ["tests*"]                # Exclude test directories

[tool.setuptools]
py-modules = ["ai_painter"]